# talk-well

./: .env.example  .gitignore  Dockerfile  INSTRUCTIONS.md  Insomnia_2025-12-06.yaml  docker-compose.yaml  pyproject.toml
app/: enums.py  models.py  serializers.py  services.py  urls.py  views.py
app/migrations/: 0001_initial.py
realmate_challenge/: settings.py
web/: Dockerfile  index.html  package.json  vite.config.ts
web/src/: App.tsx  index.css  types.ts
web/src/components/chat/: ChatArea.tsx  ChatLayout.tsx  ConversationList.tsx  MessageBubble.tsx
web/src/hooks/querys/: index.ts
web/src/lib/: api.ts
web/src/pages/: Home.tsx
web/src/services/: index.ts
web/src/stores/: conversation.ts
